practice/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingressss
spec:
  rules:
    - host: dhankhar.local
      http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service:
                name: myapp-svc
                port: 
                  number: 80
